app/src/main/cpp/audio_engine.h

    float getLooperCompressionRatio();
    float getLooperCompressionAttack();
    float getLooperCompressionRelease();
    
    // Normalização automática
    void setLooperAutoNormalization(bool enabled);
    void setLooperNormalizationTarget(float target); // dB
    bool isLooperAutoNormalizationEnabled();
    float getLooperNormalizationTarget();
    
    // Filtros para looper
    void setLooperLowPassFilter(bool enabled);
    void setLooperLowPassFrequency(float frequency); // Hz
    void setLooperHighPassFilter(bool enabled);
    void setLooperHighPassFrequency(float frequency); // Hz
    bool isLooperLowPassEnabled();
    bool isLooperHighPassEnabled();
    float getLooperLowPassFrequency();
    float getLooperHighPassFrequency();
    
    // Reverb de cauda entre loops
    void setLooperReverbTail(bool enabled);
    void setLooperReverbTailDecay(float decay); // segundos
    void setLooperReverbTailMix(float mix);
    bool isLooperReverbTailEnabled();
    float getLooperReverbTailDecay();
    float getLooperReverbTailMix();
    
    // === FASE 6: INTEGRAÇÃO AVANÇADA ===
    
    // Quantização
    void setLooperQuantization(bool enabled);
    void setLooperQuantizationGrid(float gridSize); // em batidas (1/4, 1/8, 1/16, etc.)
    bool isLooperQuantizationEnabled();
    float getLooperQuantizationGrid();
    
    // Fade In/Out automático
    void setLooperAutoFadeIn(bool enabled);
    void setLooperAutoFadeOut(bool enabled);
    void setLooperFadeInDuration(float duration); // segundos
    void setLooperFadeOutDuration(float duration); // segundos
    bool isLooperAutoFadeInEnabled();
    bool isLooperAutoFadeOutEnabled();
    float getLooperFadeInDuration();
    float getLooperFadeOutDuration();
    
    // Integração MIDI
    void setLooperMidiEnabled(bool enabled);