flutter_app/lib/engine/bindings.dart


  double getLooperCompressionRatio() {
    return _getLooperCompressionRatio();
  }

  late final _getLooperCompressionRatioPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperCompressionRatio',
      );
  late final _getLooperCompressionRatio = _getLooperCompressionRatioPtr
      .asFunction<double Function()>();

  double getLooperCompressionAttack() {
    return _getLooperCompressionAttack();
  }

  late final _getLooperCompressionAttackPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperCompressionAttack',
      );
  late final _getLooperCompressionAttack = _getLooperCompressionAttackPtr
      .asFunction<double Function()>();

  double getLooperCompressionRelease() {
    return _getLooperCompressionRelease();
  }

  late final _getLooperCompressionReleasePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperCompressionRelease',
      );
  late final _getLooperCompressionRelease = _getLooperCompressionReleasePtr
      .asFunction<double Function()>();

  /// Normalização automática
  void setLooperAutoNormalization(bool enabled) {
    return _setLooperAutoNormalization(enabled);
  }

  late final _setLooperAutoNormalizationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperAutoNormalization',
      );
  late final _setLooperAutoNormalization = _setLooperAutoNormalizationPtr
      .asFunction<void Function(bool)>();

  void setLooperNormalizationTarget(double target) {
    return _setLooperNormalizationTarget(target);
  }

  late final _setLooperNormalizationTargetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperNormalizationTarget',
      );
  late final _setLooperNormalizationTarget = _setLooperNormalizationTargetPtr
      .asFunction<void Function(double)>();

  bool isLooperAutoNormalizationEnabled() {
    return _isLooperAutoNormalizationEnabled();
  }

  late final _isLooperAutoNormalizationEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperAutoNormalizationEnabled',
      );
  late final _isLooperAutoNormalizationEnabled =
      _isLooperAutoNormalizationEnabledPtr.asFunction<bool Function()>();

  double getLooperNormalizationTarget() {
    return _getLooperNormalizationTarget();
  }

  late final _getLooperNormalizationTargetPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperNormalizationTarget',
      );
  late final _getLooperNormalizationTarget = _getLooperNormalizationTargetPtr
      .asFunction<double Function()>();

  /// Filtros para looper
  void setLooperLowPassFilter(bool enabled) {
    return _setLooperLowPassFilter(enabled);
  }

  late final _setLooperLowPassFilterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperLowPassFilter',
      );
  late final _setLooperLowPassFilter = _setLooperLowPassFilterPtr
      .asFunction<void Function(bool)>();

  void setLooperLowPassFrequency(double frequency) {
    return _setLooperLowPassFrequency(frequency);
  }

  late final _setLooperLowPassFrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperLowPassFrequency',
      );
  late final _setLooperLowPassFrequency = _setLooperLowPassFrequencyPtr
      .asFunction<void Function(double)>();

  void setLooperHighPassFilter(bool enabled) {
    return _setLooperHighPassFilter(enabled);
  }

  late final _setLooperHighPassFilterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperHighPassFilter',
      );
  late final _setLooperHighPassFilter = _setLooperHighPassFilterPtr
      .asFunction<void Function(bool)>();

  void setLooperHighPassFrequency(double frequency) {
    return _setLooperHighPassFrequency(frequency);
  }

  late final _setLooperHighPassFrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperHighPassFrequency',
      );
  late final _setLooperHighPassFrequency = _setLooperHighPassFrequencyPtr
      .asFunction<void Function(double)>();

  bool isLooperLowPassEnabled() {
    return _isLooperLowPassEnabled();
  }

  late final _isLooperLowPassEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperLowPassEnabled',
      );
  late final _isLooperLowPassEnabled = _isLooperLowPassEnabledPtr
      .asFunction<bool Function()>();

  bool isLooperHighPassEnabled() {
    return _isLooperHighPassEnabled();
  }

  late final _isLooperHighPassEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperHighPassEnabled',
      );
  late final _isLooperHighPassEnabled = _isLooperHighPassEnabledPtr
      .asFunction<bool Function()>();

  double getLooperLowPassFrequency() {
    return _getLooperLowPassFrequency();
  }

  late final _getLooperLowPassFrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperLowPassFrequency',
      );
  late final _getLooperLowPassFrequency = _getLooperLowPassFrequencyPtr
      .asFunction<double Function()>();

  double getLooperHighPassFrequency() {
    return _getLooperHighPassFrequency();
  }

  late final _getLooperHighPassFrequencyPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperHighPassFrequency',
      );
  late final _getLooperHighPassFrequency = _getLooperHighPassFrequencyPtr
      .asFunction<double Function()>();

  /// Reverb de cauda entre loops
  void setLooperReverbTail(bool enabled) {
    return _setLooperReverbTail(enabled);
  }

  late final _setLooperReverbTailPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperReverbTail',
      );
  late final _setLooperReverbTail = _setLooperReverbTailPtr
      .asFunction<void Function(bool)>();

  void setLooperReverbTailDecay(double decay) {
    return _setLooperReverbTailDecay(decay);
  }

  late final _setLooperReverbTailDecayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperReverbTailDecay',
      );
  late final _setLooperReverbTailDecay = _setLooperReverbTailDecayPtr
      .asFunction<void Function(double)>();

  void setLooperReverbTailMix(double mix) {
    return _setLooperReverbTailMix(mix);
  }

  late final _setLooperReverbTailMixPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperReverbTailMix',
      );
  late final _setLooperReverbTailMix = _setLooperReverbTailMixPtr
      .asFunction<void Function(double)>();

  bool isLooperReverbTailEnabled() {
    return _isLooperReverbTailEnabled();
  }

  late final _isLooperReverbTailEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperReverbTailEnabled',
      );
  late final _isLooperReverbTailEnabled = _isLooperReverbTailEnabledPtr
      .asFunction<bool Function()>();

  double getLooperReverbTailDecay() {
    return _getLooperReverbTailDecay();
  }

  late final _getLooperReverbTailDecayPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperReverbTailDecay',
      );
  late final _getLooperReverbTailDecay = _getLooperReverbTailDecayPtr
      .asFunction<double Function()>();

  double getLooperReverbTailMix() {
    return _getLooperReverbTailMix();
  }

  late final _getLooperReverbTailMixPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperReverbTailMix',
      );
  late final _getLooperReverbTailMix = _getLooperReverbTailMixPtr
      .asFunction<double Function()>();

  /// Quantização
  void setLooperQuantization(bool enabled) {
    return _setLooperQuantization(enabled);
  }

  late final _setLooperQuantizationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperQuantization',
      );
  late final _setLooperQuantization = _setLooperQuantizationPtr
      .asFunction<void Function(bool)>();

  void setLooperQuantizationGrid(double gridSize) {
    return _setLooperQuantizationGrid(gridSize);
  }

  late final _setLooperQuantizationGridPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperQuantizationGrid',
      );
  late final _setLooperQuantizationGrid = _setLooperQuantizationGridPtr
      .asFunction<void Function(double)>();

  bool isLooperQuantizationEnabled() {
    return _isLooperQuantizationEnabled();
  }

  late final _isLooperQuantizationEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperQuantizationEnabled',
      );
  late final _isLooperQuantizationEnabled = _isLooperQuantizationEnabledPtr
      .asFunction<bool Function()>();

  double getLooperQuantizationGrid() {
    return _getLooperQuantizationGrid();
  }

  late final _getLooperQuantizationGridPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperQuantizationGrid',
      );
  late final _getLooperQuantizationGrid = _getLooperQuantizationGridPtr
      .asFunction<double Function()>();

  /// Fade In/Out automático
  void setLooperAutoFadeIn(bool enabled) {
    return _setLooperAutoFadeIn(enabled);
  }

  late final _setLooperAutoFadeInPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperAutoFadeIn',
      );
  late final _setLooperAutoFadeIn = _setLooperAutoFadeInPtr
      .asFunction<void Function(bool)>();

  void setLooperAutoFadeOut(bool enabled) {
    return _setLooperAutoFadeOut(enabled);
  }

  late final _setLooperAutoFadeOutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
        'setLooperAutoFadeOut',
      );
  late final _setLooperAutoFadeOut = _setLooperAutoFadeOutPtr
      .asFunction<void Function(bool)>();

  void setLooperFadeInDuration(double duration) {
    return _setLooperFadeInDuration(duration);
  }

  late final _setLooperFadeInDurationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperFadeInDuration',
      );
  late final _setLooperFadeInDuration = _setLooperFadeInDurationPtr
      .asFunction<void Function(double)>();

  void setLooperFadeOutDuration(double duration) {
    return _setLooperFadeOutDuration(duration);
  }

  late final _setLooperFadeOutDurationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
        'setLooperFadeOutDuration',
      );
  late final _setLooperFadeOutDuration = _setLooperFadeOutDurationPtr
      .asFunction<void Function(double)>();

  bool isLooperAutoFadeInEnabled() {
    return _isLooperAutoFadeInEnabled();
  }

  late final _isLooperAutoFadeInEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperAutoFadeInEnabled',
      );
  late final _isLooperAutoFadeInEnabled = _isLooperAutoFadeInEnabledPtr
      .asFunction<bool Function()>();

  bool isLooperAutoFadeOutEnabled() {
    return _isLooperAutoFadeOutEnabled();
  }

  late final _isLooperAutoFadeOutEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>(
        'isLooperAutoFadeOutEnabled',
      );
  late final _isLooperAutoFadeOutEnabled = _isLooperAutoFadeOutEnabledPtr
      .asFunction<bool Function()>();

  double getLooperFadeInDuration() {
    return _getLooperFadeInDuration();
  }

  late final _getLooperFadeInDurationPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperFadeInDuration',
      );
  late final _getLooperFadeInDuration = _getLooperFadeInDurationPtr
      .asFunction<double Function()>();

  double getLooperFadeOutDuration() {
    return _getLooperFadeOutDuration();
  }

  late final _getLooperFadeOutDurationPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
        'getLooperFadeOutDuration',
      );
  late final _getLooperFadeOutDuration = _getLooperFadeOutDurationPtr
      .asFunction<double Function()>();

  /// Integração MIDI
  void setLooperMidiEnabled(bool enabled) {
    return _setLooperMidiEnabled(enabled);
  }
